# friday-ai-assistant

./: .coderabbit.yaml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .ruffignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MILESTONE6_COMPLETION_SUMMARY.md  README.md  RELEASE_VERIFICATION_v1.0.0-rc1.md  SECURITY.md  check_agent_files.py  claude-devops  commit_diff.txt  demo_ops_module_milestone5.py  demo_scenario.py  demo_self_modification_milestone6.py  demo_web_automation_milestone4.py  fix_base_agent_syntax.py  fix_friday.py  how cac8a38 --stat  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run_friday.py  setup.py  setup_friday.py  show_scanner_agent.py  start_friday.ps1  test_agents.py  test_basic.py  test_friday_fixed.py  test_hello.txt  test_model_simple.py
.github/workflows/: ci.yml  pr_checks.yml
agents/: base_agent.py  base_agent.py.backup_20250719_125425
agents/cybersecurity/: __init__.py  scanner_agent.py  scanner_agent.py.backup_20250719_125425
agents/development/: __init__.py  coding_agent.py
agents/supervisor/: __init__.py  orchestrator_agent.py
agents/system/: __init__.py  os_control_agent.py
agents/web/: __init__.py  automation_agent.py
config/: dev.yaml  model_configs.yaml  prod.yaml  settings.yaml  staging.yaml
core/: __init__.py  common_types.py  loggin_config.py  logging.py  orchestrator.py
core/kernel/: __init__.py  config.py  kernel.py  lifecycle.py
core/memory/: long_term.py  short_term.py
core/models/: model_manager.py
core/orchestrator/: __init__.py  orchestrator.py
core/policy/: __init__.py  engine.py
core/security/: policy_engine.py
data/: cli_history.txt
data/deployments/: deployment_config.json
data/safety/: rollback_log.json  system_state.json
data/self_modification/: pipeline_config.json
data/social_content/: calendar_cal_20251102_092448.csv  weekly_plan_plan_20251102_092448.json
docs/: CHANGELOG.md  INSTALL.md  ROADMAP.md  api_reference.md  architecture.md  capabilities.md  future_features.md  memory.md  model.md  project.md  project_overview.md  requirements.md
interfaces/cli/: terminal.py  terminal.py.backup_20250719_125425
interfaces/voice/: speech_recognition.py  (+1 more)
memory/: __init__.py  manager.py
plugins/: __init__.py  host.py  loader.py  plugin_loader.py
scripts/: ci_install.sh  test_core.py
security/: __init__.py  secrets.py  targets.yaml
tests/: __init__.py
ui/: README.md
(+151 files in other folders)
